--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>city_center_entry</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>18</java.version>
     </properties>
     <dependencies>
         <!--		<dependency>-->
@@ -61,6 +61,18 @@
             <artifactId>tensorflow</artifactId>
             <version>1.15.0</version> <!-- Replace with the appropriate version -->
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
+        <dependency>
+            <groupId>de.vinado.boot</groupId>
+            <artifactId>spring-boot-autoconfigure-dkim-javamail</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.7.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
